<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/taskPrimaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/taskAccentColor">

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="title"
            android:textSize="23dp"/>


        <ImageButton
            android:id="@+id/task_edit_button"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/task_delet_button"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_delete" />


    </LinearLayout>

    <TextView
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="description"
        android:textSize="20dp"/>


</LinearLayout>