<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeaderFragment"
    android:background="@color/colorPrimary">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|center_vertical"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <ImageButton
        android:id="@+id/avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        android:layout_gravity="right|center_vertical"/>

</FrameLayout>